classDiagram
class Bus {
    +BusId: string
    +Model: BusModel
    +BatteriKapacitetKWh: double
    +BatteriNiveauProcent: double
    +ForbrugKWhPrKm: double
    +Status: BusStatus
    +ErKritisk: bool                 %% BatteryLevel < 30 %
    +BeregnOpladningstid(kW: double): TimeSpan
}

class BusModel {
    <<enumeration>>
    MBeCitaro
    YutongE12
    BYDK9
    Volvo7900E
}

class BusStatus {
    <<enumeration>>
    PåRute
    Afløser
    Returnerer
    Oplader
    Garage
}

Bus "1" --> "1" BusModel
Bus "1" --> "1..5" BusStatus
